Tue Dec 20 09:10:05 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

       * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender_exec.cpp:
       Solved valgrind errors.

Mon Dec 19 11:33:05 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

       * tests/DAnCE/NodeManager-Deployments/run_test.pl:
       * tests/DAnCE/NodeManager-Deployments/run_test_noevent.pl:
       * tests/DAnCE/NodeManager-Deployments/run_test_cdr.pl:
       * tests/DAnCE/NodeManager-Deployments/run_testcdr_noevent.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_test.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_test_noevent.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_test_cdr.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_testcdr_noevent.pl:
       * tests/DAnCE/EM-Redeployment/run_test.pl:
       * tests/DAnCE/Em_Redeployment/run_test_noevent.pl:
       * bin/ciao_tests.lst:
       Splitted tests-runs in runs for noevent disabled and enabled.


Sun Dec 18 11:36:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Run more tests with noevent, if some of the cdp's are not fit
          for noevent, than they should move to a different directory

Fri Dec 16 12:39:56 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added performance-tests/Keyed to the test framework.

        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Optimized logging.

        * connectors/dds4ccm/performance-tests/Keyed/descriptors/Plan.cdp:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/Plan_pub.cdp:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/Plan_pub3.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan_SharedMem.cdp:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/Plan_UDPv4.cdp:
        * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_pub.cdp: